--- a/_config.yml
+++ b/_config.yml
@@ -71,9 +71,9 @@ author:
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
       url: "https://github.com/"
-    - label: "Instagram"
-      icon: "fab fa-fw fa-instagram"
-      url: "https://instagram.com/"
+    - label: "QQ"
+      icon: "fab fa-fw fa-qq"
+      url: "https://im.qq.com/"
 
 footer:
   links:
@@ -83,9 +83,9 @@ footer:
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
       url: "https://github.com/"
-    - label: "Instagram"
-      icon: "fab fa-fw fa-instagram"
-      url: "https://instagram.com/"
+    - label: "QQ"
+      icon: "fab fa-fw fa-qq"
+      url: "https://im.qq.com/"
 
 defaults:
   # _posts
