--- a/_config.yml
+++ b/_config.yml
@@ -59,7 +59,7 @@ plugins:
 
 author:
   name   : "NuyoaH"
-  avatar : "/assets/images/bio-photo.jpg"
+  avatar : "/assets/images/NuyoaH.png"
   bio    : "NuyoaH的超棒网站"
   links:
     - label: "Website"
