--- a/_config.yml
+++ b/_config.yml
@@ -60,11 +60,11 @@ plugins:
 author:
   name   : "NuyoaH"
   avatar : "/assets/images/NuyoaH.png"
-  bio    : "NuyoaH的超棒网站"
+  bio    : "窗外日光弹指过，席前花影坐前移"
   links:
-    - label: "Website"
-      icon: "fas fa-fw fa-link"
-      url: "https://"
+    - label: "Wechat"
+      icon: "fas fa-fw fa-Wechat"
+      url: "https://weixin.qq.com/"
     - label: "Twitter"
       icon: "fab fa-fw fa-twitter-square"
       url: "https://twitter.com/"
